# fontplayer

./: .gitignore  DIRECTORY_STRUCTURE.md  IMPLEMENTATION_STATUS.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_COMPLETE_FINAL.md  REFACTORING_STATUS.md  STAGE1_IMPLEMENTATION.md  TAURI_SETUP.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  stats.html  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
coverage/: index.html
coverage/src/: App.vue.html  index.html  main.ts.html
docs/: variable-font-axis-names.md
playwright-report/: index.html
scripts/: README.md  generate-keys.ts  generate-new-project-file.ts  migrate-project.ts  pack-default-template.mts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/assets/: main.css
src/features/: glyphSkeletonBind.ts  glyphSkeletonDragger.ts  glyphWeight.ts  skeletonVariableBind.ts  svg.ts  variableInterpolation.ts
src/fontManager/: character.ts  decode.ts  encode.ts  font.ts  index.ts  table.ts  validators.ts
src/i18n/: dialogs.ts  index.ts  menus.ts  panels.ts  programming.ts  welcome.ts
src/plugins/: naive-ui.ts
src/router/: index.ts
src/stores/: advancedEdit.ts  bottomBarTool.ts  character.ts  characterGridEdit.ts  characterMetricsDraft.ts  decompositionData.ts  dialogs.ts  editor.ts  editorConstantsSession.ts  editorPreference.ts  glyph.ts  pictureImport.ts  project.ts  skeletonDragger.ts  templateSession.ts  (+1 more)
tests/: COVERAGE_BASELINE.md  README.md  RUNNING_TESTS.md
(+961 files in other folders)
